대격변 전 최종 커밋

--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-  "index" : ["main","calendar","notice","schedule"]
+  "index" : ["main","calendar","notice","schedule"],
+  "class" : {
+    "age" : 3,
+    "ban" : 10
+  }
 }
