--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "colors": "^1.1.2",
     "forever": "^0.15.3",
+    "k-lunch": "^1.0.0",
     "koa": "^2.5.0",
     "koa-route": "^3.2.0",
     "koa-serve": "^0.1.7",
