--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "web",
+  "name": "keicatbe",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js",
+    "clear": "fuser -k 3390/tcp"
   },
-  "author": "newline <ilhaera@gmail.com>",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.1.2",
-    "forever": "^0.15.3",
+    "@koa/cors": "^2.2.1",
+    "colors": "^1.3.0",
     "k-lunch": "^1.0.0",
-    "koa": "^2.5.0",
-    "koa-route": "^3.2.0",
-    "koa-serve": "^0.1.7",
-    "koa-sslify": "^2.1.2",
-    "koa-static": "^4.0.2"
+    "koa": "^2.5.1",
+    "koa-router": "^7.4.0",
+    "koa-sslify": "^2.1.2"
   }
 }
